<resources>
    <string name="app_name">Ashore</string>
    <string name="profile_pic_icon">Profile Pic Icon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="image_description">image</string>
    <string name="error_notFound_community">We are not able to find any community. Please try again!</string>
    <string name="error_noJoined_community">You haven\'t joined a community yet.</string>
    <string name="error_notFound_interest">We are not able to find any interests. Please try again!</string>
    <string name="info_noJoined_community">Take a look around!</string>
    <string name="crash_report_message">An unexpected error occurred forcing the
    application to stop.Press Ok to report the issue.</string>
    <string name="crash_report_ok_message">Thank You...</string>
    <string name="facebook_app_id">306667023081544</string>
    <string name="text_looped">Ashore</string>
    <string name="text_signup">SIGN UP</string>
    <string name="text_phoneNumber">Phone number</string>
    <string name="text_verify">VERIFY</string>
    <string name="text_activate">ACTIVATE</string>
    <string name="text_or">OR</string>
    <string name="text_activate_code">Activation Code</string>
    <string name="auth_mobile_field_is_incorrect">Please enter a valid mobile</string>
    <string name="auth_email_field_is_incorrect">Please enter a valid email</string>
    <string name="auth_email_field_not_entered">Please enter email</string>
    <string name="auth_password_field_not_entered">Please enter password</string>
    <string name="auth_password_field_is_too_short">Password is too short (minimum is 8 characters)</string>
    <string name="auth_full_name_field_not_entered">Please enter Full Name</string>
    <string name="auth_full_name_field_is_too_short">Full Name is too short (minimum is 3 characters)</string>
    <string name="auth_full_name_field_is_too_long">Full Name is too long (maximum is 50 characters)</string>
    <string name="auth_full_name_has_impossible_characters">Full Name has impossible characters (not allowed: \'&gt;\', \'&lt;\', \';\')</string>
    <string name="forgot_password_email_field_not_entered">Please enter email</string>
    <string name="forgot_password_email_field_is_incorrect">Please enter a valid email</string>
    <string name="profile_full_name_not_entered">Please enter Full Name</string>
    <string name="profile_full_name_not_changed">Full Name must be different</string>
    <string name="change_password_old_password_not_entered">Please enter old password</string>
    <string name="change_password_new_password_not_entered">Please enter new password</string>
    <string name="change_password_all_fields_not_entered">Please fill all empty input fields</string>
    <string name="change_password_old_password_wrong">Wrong old password</string>
    <string name="auth_not_all_fields_entered">Please fill all empty input fields</string>
    <string name="text_already_login">ALREADY A MEMBER ? LOG IN</string>
    <string name="birthday">MM/DD/YY</string>
    <string name="lets_get_started">Let’s Get Started</string>
    <string name="create_a_new_event">Create a New Event</string>
    <string name="public_communties_default_text">There are no activities yet…</string>
    <string name="locationActivity_text"><b>Great!</b> we found <b>%1$s</b> communities near you.</string>
    <string name="locationActivity_button_text">Continue</string>
    <string name="locationActivity_text_location_search">Searching for nearby cities</string>
    <string name="locationActivity_text_location_change">I\'M NOT IN <b>%1$s</b></string>
    <string name="sla_locationNotDetected">Sorry! We can\'t locate you right now.</string>
    <string name="pca_title">Communities</string>
    <string name="pca_text_next">Next</string>
    <string name="pca_text_heading">Pick some Communities that interest you</string>
    <string name="ipc_text_community">Community name</string>
    <string name="ipc_text_community_description">Community description</string>
    <string name="ipc_text_join">Join</string>
    <string name="ipc_text_leave">Leave</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_edit_profile">Edit My Profile</string>
    <string name="drawer_text_home">My Dashboard</string>
    <string name="drawer_text_planner">Calendar</string>
    <string name="drawer_text_recipient">Recipients Dashboard</string>
    <string name="drawer_text_community_dashboard">Communities</string>
    <string name="drawer_text_connections_dashboard">People</string>
    <string name="drawer_text_chats">Recent Chats</string>
    <string name="drawer_text_report_a_bug">Report A Bug</string>
    <string name="drawer_text_settings">More Options</string>
    <string name="drawer_text_log_out">Log Out</string>
    <string name="text_one">1</string>
    <string name="text_two">2</string>
    <string name="text_three">3</string>
    <string name="create_account">Create Account</string>
    <string name="discover">Discover</string>
    <string name="text_next">NEXT</string>
    <string name="text_done">DONE</string>
    <string name="text_terms_and_conditions">Terms &amp; Condition</string>
    <string name="text_create_account">Create Account</string>
    <string name="text_add_recipient">Add Recipient</string>
    <string name="text_discover">Discover</string>
    <string name="text_category_start">Which topics are you interested in?</string>
    <string name="notification">Notification</string>
    <string name="chats">Chats</string>
    <string name="actionbar_text_recipient">Recipient\'s Dashboard</string>
    <string name="create_new_group">New Group</string>
    <string name="homeFragment_text_upcomingEvent">Upcoming Events</string>
    <string name="homeFragment_text_recentActivity">Recent Activity</string>
    <string name="homeFragment_text_discoverPeople">Discover People</string>
    <string name="homeFragment_text_discoverCommunities">Discover Communities</string>
    <string name="homeFragment_text_notFound_upcomingEvent">Looks like you don\'t have any events coming up</string>
    <string name="homeFragment_text_notFound_recentActivity">No recent activity in your communities.</string>
    <string name="homeFragment_text_notFound_discoverPeople">No one matches your search criteria right now.</string>
    <string name="homeFragment_text_notFound_discoverPeople_inviteFriends">Want to invite some friends to Ashore?</string>
    <string name="homeFragment_text_notFound_connection">You don\'t have any connections on Ashore yet.\n Why not take a look and see who\'s</string>
    <string name="homeFragment_text_notFound_discoverCommunities">No communities match your search criteria right now</string>
    <string name="homeFragment_text_notFound_discoverCommunities_createNew">Want to create a new community?</string>
    <string name="past_event_activity_text_notFound_events">There are no past events in the community</string>
    <string name="edit">Edit</string>
    <string name="plus">Add</string>
    <string name="filter">Filter</string>
    <string name="text_name">Name</string>
    <string name="text_gender">Gender (Optional)</string>
    <string name="text_location">Location</string>
    <string name="text_birthday">Birthday (Optional)</string>
    <string name="text_date_of_birth">Date Of Birth</string>
    <string name="text_age">Age</string>
    <string name="text_disease">Disease</string>
    <string name="tell_us_about_youself">Tell us about yourself.</string>
    <string name="looped_for">I\'m using Ashore for</string>
    <string name="interested_in">I\'m interested in</string>
    <string name="title_activity_create_profile_step3">createProfileStep2Activity</string>
    <string name="title_activity_create_profile_step2">CreateProfileStep2Activity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="text_select_more_interest">Select more interests</string>
    <string name="dar_title">Would you like to Add or Join Recipient?</string>
    <string name="dar_text_new">New</string>
    <string name="dar_text_existing">Existing</string>
    <string name="dar_text_skip">Skip</string>
    <string name="text_line_one">Would You Like to check out people and</string>
    <string name="text_line_two">Communities that match some of </string>
    <string name="text_line_three">interest you selected?</string>
    <string name="discover_people">Discover People</string>
    <string name="discover_communities">Discover Communities</string>
    <string name="previous_step_done">Step Done</string>
    <string name="text_three_discover">3</string>
    <string name="text_invite">Invite</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="text_search_more_communities">Search communities</string>
    <string name="text_search_more_people">Search for more people</string>
    <string name="done">Done</string>
    <string name="cdi_sms_invitation_text">demo text message to invites people</string>
    <string name="cdi_invitation_sent_message">Thanks for invite people</string>
    <string name="search">Search</string>
    <string name="communities_activities_title">Communities</string>
    <string name="community_text_tab1">Joined</string>
    <string name="community_text_tab2">Discover</string>
    <string name="interest">Interests</string>
    <string name="category">Categories</string>
    <string name="topics">Topics</string>
    <string name="location">Location</string>
    <string name="radius">radius</string>
    <string name="km0">0 MILES</string>
    <string name="km10">10 MILES</string>
    <string name="values0to10">0  1  2  3  4  5  6  7  8  9  10</string>
    <string name="apply_filters">APPLY FILTERS</string>
    <string name="invite_text_line_one">Do you Invite Friends and </string>
    <string name="invite_text_line_two"> Family to join your</string>
    <string name="invite_text_line_three"> caregiving loop.</string>
    <string name="cdi_sms_invitaton_text">I\'m using Ashore try</string>
    <string name="cdi_invitaion_sent_message">Thanks for sharing !</string>
    <string name="dp_noPhoneNumberFound">you don\'t have your contact\'s phone number.</string>
    <string name="text_my_agenda">AGENDA</string>
    <string name="text_my_community">MY COMMUNITIES</string>
    <string name="text_recent_activities">RECENT ACTIVITIES</string>
    <string name="text_agenda_name">Agenda Content</string>
    <string name="text_agenda_description">Discription</string>
    <string name="text_agenda_time">10:30</string>
    <string name="text_time_convention">AM</string>
    <string name="text_sender_name">Name</string>
    <string name="text_community">Community</string>
    <string name="text_message">Message</string>
    <string name="text_about_me">ABOUT ME</string>
    <string name="text_details">DETAILS</string>
    <string name="text_recipients">RECIPIENTS</string>
    <string name="text_name_your_community">Name Your Community</string>
    <string name="text_add_description">Add Description</string>
    <string name="text_enter_cityName_or_ZipCode">Enter City/State or Zip code</string>
    <string name="text_community_privacy">Privacy</string>
    <string name="text_community_make_privacy">Make this group private?</string>
    <string name="text_community_can_see">Only members of the group can see events and posts</string>
    <string name="text_community_all_group">All members of the group can make posts</string>
    <string name="text_community_public">Public</string>
    <string name="text_community_group_everyone">Everyone</string>
    <string name="text_community_group_member">Members</string>
</resources>