<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.trutek.looped.msas.common.views.maskedimageview.MaskedImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_description"
        android:id="@+id/ipc_imageView_communityImage"
        android:layout_marginTop="@dimen/value_ten"
        android:layout_marginBottom="@dimen/value_ten"
        android:layout_marginEnd="@dimen/value_ten"
        android:layout_marginStart="@dimen/value_ten"
        android:scaleType="centerCrop"
        app:mask="@drawable/rounded_corner_discussion" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/value_twenty">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ipc_textView_community_name"
            android:text="@string/ipc_text_community"
            android:layout_marginStart="@dimen/value_twenty_five"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/ipc_textView_community_description"
            android:layout_toStartOf="@+id/ipc_button_join"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ipc_textView_community_description"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/value_twenty_five"
            android:text="@string/ipc_text_community_description"
            android:layout_toStartOf="@+id/ipc_button_join"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/ipc_button_join"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/ipc_text_join"
            android:textColor="@android:color/white"
            android:background="@drawable/border_rounded_filled_image_translucent_green"
            android:layout_marginEnd="@dimen/value_twenty"/>

    </RelativeLayout>




</RelativeLayout>