<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/upper_layout_popup_discover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/value_ten"
        android:gravity="center">

        <TextView
            android:id="@+id/text_popup_invite_line_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_twenty_five"
            android:gravity="center"
            android:text="@string/invite_text_line_one"
            android:textColor="@color/color_black" />
        <TextView
            android:id="@+id/text_popup_invite_line_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_popup_invite_line_one"
            android:layout_marginTop="@dimen/value_five"
            android:gravity="center"
            android:text="@string/invite_text_line_two"
            android:textColor="@color/color_black" />

        <TextView
            android:id="@+id/text_popup_invite_line_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_five"
            android:gravity="center"
            android:layout_below="@+id/text_popup_invite_line_two"
            android:text="@string/invite_text_line_three"
            android:textColor="@color/color_black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/upper_layout_popup_discover">

        <Button
            android:id="@+id/popup_invite_button"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/value_ten"
            android:background="@color/splash_color"
            android:gravity="center"
            android:text="@string/text_invite"
            android:textColor="@color/color_white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/invite_button_skip"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/value_ten"
            android:layout_toRightOf="@+id/popup_invite_button"
            android:background="@drawable/custom_border_skip"
            android:gravity="center"
            android:text="SKIP"
            android:textColor="@color/splash_color"
            android:textSize="16sp" />
    </RelativeLayout>
</RelativeLayout>