<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/value_fourty"
            android:layout_marginStart="@dimen/value_fifteen"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/new_community_image_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_description"
                android:src="@mipmap/community_title_icon" />

            <EditText
                android:id="@+id/new_community_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/text_name_your_community"

                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textSize="@dimen/small_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/value_fifteen"
            android:background="@color/color_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/value_fifteen"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/new_community_desc_image_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_description"
                android:src="@mipmap/description_icon" />

            <EditText
                android:id="@+id/new_community_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/new_community_desc_image_icon"
                android:background="@android:color/transparent"
                android:hint="@string/text_add_description"
                android:textColor="@color/color_black"
                android:textSize="@dimen/small_text_size" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/value_fifteen"
            android:layout_marginTop="@dimen/value_fifty"
            android:background="@color/color_black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_fifteen">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_description"
                android:layout_marginStart="@dimen/value_twenty"
                android:padding="@dimen/value_ten"
                android:src="@mipmap/lock"
                android:layout_alignParentTop="true" />
            <ToggleButton
                android:id="@+id/community_privecy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/transparent"
                android:drawableTop="@drawable/toggle_select_unselect_community"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/edit_text_border"
                android:textOff="@string/text_community_public"
                android:textOn="@string/text_community_privacy"
                android:textSize="@dimen/small_text_size" />

            <TextView
                android:id="@+id/community_textview_privacy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/text_community_make_privacy"
                android:textColor="@color/edit_text_border"
                android:textSize="@dimen/small_text_size"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/value_five"
                android:layout_toEndOf="@+id/imageView" />
            <TextView
                android:id="@+id/community_textview_privacy1"
                android:layout_width="@dimen/value_one_hundred_eighty"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/text_community_can_see"
                android:textColor="@color/edit_text_border"
                android:textSize="@dimen/value_twelve"
                android:layout_below="@+id/community_textview_privacy"
                android:layout_toEndOf="@+id/imageView" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_ten">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_description"
                android:layout_marginStart="@dimen/value_twenty"
                android:layout_centerVertical="true"
                android:src="@mipmap/community_title_icon" />
            <TextView
                android:id="@+id/community_textview_group_post"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/text_community_all_group"
                android:textColor="@color/edit_text_border"
                android:textSize="@dimen/small_text_size"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/imageView2" />

            <ToggleButton
                android:id="@+id/community_group_post_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@color/transparent"
                android:drawableTop="@drawable/toggle_select_unselect_community"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/edit_text_border"
                android:textOff="@string/text_community_group_everyone"
                android:textOn="@string/text_community_group_member" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/value_fifteen"
            android:layout_marginTop="@dimen/value_ten"
            android:background="@color/color_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/value_fifteen"
            android:layout_marginTop="@dimen/value_thirty"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/new_community_location_image_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_description"
                android:src="@mipmap/location_icon" />

            <TextView
                android:id="@+id/new_community_location_editText"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/text_enter_cityName_or_ZipCode"
                android:maxLines="2"
                android:textColor="@color/color_black"
                android:textSize="@dimen/small_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end">

                <ImageView
                    android:id="@+id/new_community_location_private_image_icon"
                    android:layout_width="@dimen/value_fourty"
                    android:layout_height="@dimen/value_fourty"
                    android:layout_marginEnd="@dimen/value_ten"
                    android:contentDescription="@string/image_description"
                    android:background="@drawable/selector_community_detect" />


                <ImageView
                    android:id="@+id/new_community_location_global_image_icon"
                    android:layout_width="@dimen/value_fourty"
                    android:layout_height="@dimen/value_fourty"
                    android:layout_marginEnd="@dimen/value_four"
                    android:contentDescription="@string/image_description"
                    android:background="@drawable/selector_community_global" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/value_ninety"
            android:layout_marginStart="@dimen/value_twenty"
            android:layout_marginTop="@dimen/value_four"
            android:background="@color/color_black" />


    </LinearLayout>
</ScrollView>
